Bug 241282 When choosing an alternative location via "Browse...", the Installer "defaults" to ns_temp subfolder. patch by <jhenry@ccs.neu.edu> r+a=benjamin