toolkit/mozapps/installer/windows/wizard/setup/dialogs.c
@@ -75,6 +75,10 @@
 #endif
 #endif
 
+#ifndef CSIDL_PROGRAM_FILES
+#define CSIDL_PROGRAM_FILES     0x0026
+#endif // CSIDL_PROGRAM_FILES
+
 // Turn off default to safe upgrade for 0.8... until we can guarantee that we won't be deleting other files. 
 #define DEFAULT_SAFE_UPGRADE FALSE
 
@@ -613,19 +617,22 @@ int CALLBACK BrowseCallbackProc(HWND hwnd, UINT uMsg, LPARAM lParam, LPARAM lpDa
 
 void BrowseForDirectory(HWND hParent)
 { 
-	LPITEMIDLIST  itemIDList;
-	BROWSEINFO    browseInfo;
+  LPITEMIDLIST  itemIDList;
+  BROWSEINFO    browseInfo;
   char          currDir[MAX_PATH];
-  
-  GetCurrentDirectory(MAX_PATH, currDir);
 
-	browseInfo.hwndOwner		  = hParent;
-	browseInfo.pidlRoot			  = NULL;
-	browseInfo.pszDisplayName	= currDir;
-	browseInfo.lpszTitle		  = sgInstallGui.szBrowseInfo;
-	browseInfo.ulFlags			  = BIF_USENEWUI | BIF_RETURNONLYFSDIRS;
-	browseInfo.lpfn				    = NULL;
-	browseInfo.lParam			    = 0;
+  if(SHGetSpecialFolderLocation(hParent, CSIDL_PROGRAM_FILES, &itemIDList) == S_OK)
+    SHGetPathFromIDList(itemIDList, (LPTSTR) currDir);
+  else
+    strncpy(currDir, "C:\\", sizeof(currDir));
+
+  browseInfo.hwndOwner		  = hParent;
+  browseInfo.pidlRoot			  = NULL;
+  browseInfo.pszDisplayName	= currDir;
+  browseInfo.lpszTitle		  = sgInstallGui.szBrowseInfo;
+  browseInfo.ulFlags			  = BIF_USENEWUI | BIF_RETURNONLYFSDIRS;
+  browseInfo.lpfn				    = NULL;
+  browseInfo.lParam			    = 0;
 
   if (currDir[0]) {
     browseInfo.lParam = (LPARAM) strdup(currDir);
